2009-10-21  Thomas Moulard  <thomas.moulard@gmail.com>

	Revert some MS Windows sabotage.
	* tests/simple.cc: Remove pause command from test case.

2009-10-21  Thomas Moulard  <thomas.moulard@gmail.com>

	Provide getSizeOfProblem.
	* src/roboptim-core-cfsqp-plugin.cc: Here.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Initialize variables properly.
	Patch submitted by Florent Lamiraux.
	http://sourceforge.net/mailarchive/message.php?msg_name=4ABC7464.8050305%40laas.fr
	* src/ofsqp.cc: Initialize variables properly.

2009-08-31  Thomas Moulard  <thomas.moulard@gmail.com>

	Update submodule.
	* tests/shared-tests: Here.

2009-08-31  Thomas Moulard  <thomas.moulard@gmail.com>

	Add libcwd support.
	* tests/common.hh,
	* tests/optimization-problem-1.cc,
	* tests/plugin.cc,
	* tests/simple-1.cc,
	* tests/simple-2.cc,
	* tests/simple.cc: Make sure sys.hh is included first
	as roboptim-core debug mode require it.

2009-08-31  Thomas Moulard  <thomas.moulard@gmail.com>

	Update AUTHORS and add THANKS file.
	* AUTHORS: Update.
	* THANKS: New.

2009-08-31  Thomas Moulard  <thomas.moulard@gmail.com>

	Add CFSQP original documentation.
	* LICENSE.CFSQP: New.
	* README.CFSQP: New.

2009-08-31  Thomas Moulard  <thomas.moulard@gmail.com>

	Add OFSQP.
	This patch integrat Adrien Escande modifications to CFSQP.
	It includes a C++ wrapper and some bug fix.
	Original patch by Francois Keith <francois.keith@gmail.com>.
	* msvc/roboptim-core-plugin-cfsqp/roboptim-core-cfsqp-plugin.sln,
	* msvc/roboptim-core-plugin-cfsqp/roboptim-core-plugin-cfsqp.vcproj,
	* msvc/simple/simple.vcproj,
	* msvc/simplewithdll/simplewithdll.vcproj: Copy from msvc/simple/simple.vcproj,
	Compile new files and headers.
	* src/Makefile.am: Update files/sources list.
	* src/cfsqp.c: Remove.
	* src/ofsqp.cc: New.
	* src/ofsqp.hh: New.
	* src/qld.c: Remove.
	* src/roboptim-core-cfsqp-plugin.cc: Use OFSQP instead of CFSQP.
	* tests/Makefile.am: Update files/sources list.