@@ -8,9 +8,10 @@
 
 #ifndef OFSQP_HH
 # define OFSQP_HH
-# include <stdio.h>
-# include <math.h>
-# include <stdlib.h>
+# include <cstdio>
+# include <cmath>
+# include <algorithm>
+# include <cstdlib>
 
 /* As MSVC does not declare properly __STDC__, let's define
    it manually. */
@@ -554,10 +555,8 @@ public :
 
 #define abs(x) ((x) >= 0 ? (x) : -(x))
 #define dabs(x) (doublereal)abs(x)
-#define min(a,b) ((a) <= (b) ? (a) : (b))
-#define max(a,b) ((a) >= (b) ? (a) : (b))
-#define dmin(a,b) (doublereal)min(a,b)
-#define dmax(a,b) (doublereal)max(a,b)
+#define dmin(a,b) (doublereal)std::min(a,b)
+#define dmax(a,b) (doublereal)std::max(a,b)
 
   /* procedure parameter types for -A and -C++ */
 
